add visitMandatory and make FieldDomainParser typed reformat SearchIndexPruningSettings
Signed-off-by: Lamine Idjeraoui <lidjeraoui@apple.com>